testdata/baselines/reference/submodule/compiler/pathsValidation1.errors.txt
tsconfig.json(3,9): error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
  Use '"paths": {"*": "./*"}' instead.
tsconfig.json(5,18): error TS5063: Substitutions for pattern '*' should be an array.


==== tsconfig.json (2 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            ~~~~~~~~~
!!! error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use '"paths": {"*": "./*"}' instead.
            "paths": {
                "*": "*"
                     ~~~
!!! error TS5063: Substitutions for pattern '*' should be an array.
            }
        }
    }
==== a.ts (0 errors) ====
    let x = 1;